en/docs/api-manager/3.1.0/learn/consume-api/discover-apis/search.md
---
title: "Search"
description: "Search for APIs in the Publisher or Developer Portal using name, provider, version, and other clauses."
canonical_url: https://wso2.com/api-platform/docs/api-manager/3.1.0/learn/consume-api/discover-apis/search/
md_url: https://wso2.com/api-platform/docs/api-manager/3.1.0/learn/consume-api/discover-apis/search.md
tags:
  - api-manager
  - learn
  - consume-api
  - discover-apis
author: WSO2 API Platform Documentation Team
last_updated: 2026-07-27
content_type: "reference"
---

# Search

The Developer Portal provides several useful features to build and nurture an active community of users for your APIs. This is required to advertise APIs, learn user requirements, and market trends.

Let's see what community features are available in the Developer Portal:

#### Use the search facility

You can search for APIs in the API Publisher or Developer Portal in the following ways:

<table>
<thead>
<tr class="header">
<th>Clause</th>
<th>Syntax</th>
</tr>
</thead>
<tbody>
<tr class="even">
<td>Unified search</td>
<td><p>As this is the default option, simply enter any attribute value 
of the API and search.</p>
<p>For example, PizzaShackAPI will search for PizzaShackAPI in API name, context, version, documents, etc.</p>
</td>
</tr>
<tr class="odd">
<td>By the API's name</td>
<td><p><strong>name:xxxx</strong> . For example, name:PizzaShackAPI</p>
<p>Name is the API name.</p></td>
</tr>
<tr class="even">
<td>By the API provider</td>
<td><p><strong>provider:xxxx</strong> . For example, provider:admin</p>
<p>Provider is the user who created the API.</p></td>
</tr>
<tr class="odd">
<td>By the API version</td>
<td><p><strong>version:xxxx</strong> . For example, version:1.0.0</p>
<p>A version is given to an API at the time it is created.</p></td>
</tr>
<tr class="even">
<td>By the context</td>
<td><p><strong>context:xxxx.</strong> For example, context:/phoneverify</p>
<p>Context is the URL context of the API that is specified as /&lt;context_name&gt; at the time the API is created.</p></td>
</tr>
<tr class="odd">
<td>By the API's status</td>
<td><p><strong>status:xxxx</strong> . For example, status:PUBLISHED</p>
<p>A state is any stage of an API's lifecycle. The default lifecycle stages include created, prototyped, published, deprecated, retired and blocked.</p></td>
</tr>
<tr class="even">
<td>By description</td>
<td><p><strong>description:xxxx</strong></p>
<p>A description can be given to an API at the time it is created or later. There can be APIs without descriptions as this parameter is optional. <strong><br />
</strong></p></td>
</tr>
<tr class="odd">
<td>By the subcontext</td>
<td><p><strong>subcontext:xxxx</strong> . For example, subcontext:/checkphonenumber.</p>
<p>A subcontext is the URL pattern of any resource of the API. API resources are created at the time the API is created or later when it is modified. For example, if you create a resource by the name <code>      checkphonenumber</code>, then <code>/checkphonenumber</code> becomes one subcontext of the API. <strong><br />
</strong></p></td>
</tr>
<tr class="even">
<td>By the content of the API documentation</td>
<td><p><strong>doc:xxxx</strong></p>
<p>You can create API documentation in-line (using the API Publisher UI itself), by uploading a file or referring to an external URL. This search enables you to give a sentence or word phrase that is inside the in-line documentation and find the API that the documentation is added for. <strong><br />
</strong></p></td>
</tr>
<tr class="odd">
<td>By tag</td>
<td><p><strong>tag:xxxx</strong> . For example, tag:pizza</p>
<p>A tag can be given to an API at the time it is created or later. There can be APIs without tags as this parameter is optional.</p></td>
</tr>
<tr class="even">
<td>By microgateway label</td>
<td><p><strong>label:xxxx</strong> . For example, label:marketing</p>
<p>A label is used to group APIs based on the Microgateway distribution. It can be given to an API at the time it is created or later. There can be APIs without labels as this parameter is optional.</p></td>
</tr>
<tr class="odd">
<td>By a custom property</td>
<td><p><strong>property_name:property_value</strong></p>
<p>A property can be defined to an API at the time it is created or later. There can be APIs without properties as this parameter is optional. <strong><br />
</strong></p></td>
</tr>
<tr class="even">
<td>By API category</td>
<td><p><strong>api-category:xxxx</strong> . For example, api-category:test</p>
<p>An API category can be used to group APIs based on any criteria. API categories can be defined from the Admin Portal and can be assigned to an API from the Design Configurations section of the Publisher Portal.</p></td>
</tr>
</tbody>
</table>


